<resources>
    <string name="app_name">Sweets</string>
    <string name="default_notification_channel_id">FCM_NOTIFICATIONS</string>
    <string name="internet_issue">Internet Issue</string>
    <string name="internet_issue_message">No internet connection!!
Connect to the internet and try again.</string>
    <string name="internet_message">No internet connection!!</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="agree"><u>I agree to the terms of use</u></string>
    <string name="terms">Terms Of Use</string>
    <string name="skip">Skip</string>
    <string name="activation">Activation</string>
    <string name="activation_code">Activation Code</string>
    <string name="ntf_ask">Enable Alerts?</string>
    <string name="ntf_message">We strongly recommend that you enable alerts to get the latest exclusive offers only in alerts.</string>
    <string name="activ_ntf">Allow Alerts</string>
    <string name="location_ditict">Select your location</string>
    <string name="region">Region</string>
    <string name="add_location">Add location</string>
    <string name="update_location">Update location</string>
    <string name="login_error_title">Login Error</string>
    <string name="login_error_body">You must agree the terms of use!</string>
    <string name="map_here">Here I am!!</string>
    <string name="warning">Warning</string>
    <string name="are_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="my_fav">My Favourite</string>
    <string name="my_addresses">My Addresses</string>
    <string name="about_app">About App</string>
    <string name="call_us">Call Us</string>
    <string name="lang">Arabic</string>
    <string name="logout">Logout</string>
    <string name="delivery_to">Delivery to:</string>
    <string name="search">Search</string>
    <string name="occasion_cat">Shop By Occasion</string>
    <string name="department_cat">Shop By Category</string>
    <string name="our_new">What\'s New</string>
    <string name="best_seller">Best Seller</string>
    <string name="my_cart">My Cart</string>
    <string name="stores">Stores</string>
    <string name="connection_reason">Connection Reason</string>
    <string name="your_message">Your Message</string>
    <string name="send">Send</string>
    <string name="your_info">Your Information</string>
    <string name="first_name">Name</string>
    <string name="gender">Gender</string>
    <string name="birth_day">Date of Birth</string>
    <string name="email">Email</string>
    <string name="your_phone">Your Phone Number</string>
    <string name="save">Save</string>
    <array name="gender_types">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </array>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="add_addresses_plus">Add Addresses +</string>
    <string name="add_new_addresses">Add New Addresses</string>
    <string name="edit_addresses">Edit The Address</string>
    <string name="add_addresses">Add Addresses</string>
    <string name="delete">Delete</string>
    <string name="piece">Piece</string>
    <string name="street">Street</string>
    <string name="avenue">Avenue</string>
    <string name="house_number">House Number</string>
    <string name="floor_number">Floor Number</string>
    <string name="additional_info">Additional information about the address</string>
    <string name="delete_conf">Are you sure you want to delete this address ?</string>
    <string name="order_no">Order No :</string>
    <string name="dinar">SAR</string>
    <string name="current_orders">My Current Orders</string>
    <string name="previous_orders">My Previous Orders</string>
    <string name="my_order">My Order</string>
    <string name="order_status">Order Status</string>
    <string name="address">Address</string>
    <string name="totals">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel">Cancel</string>
    <string name="repeat_order">Repeat Order</string>
    <string name="cancel_conf">Are you sure to cancel the order?</string>
    <string name="payment_method">Payment method</string>
    <string name="filter">Filter</string>
    <string name="category">Category</string>
    <string name="occasion">Occasion</string>
    <string name="according_store">According To The Store</string>
    <string name="processing_time">Processing Time</string>
    <string name="offers">Offers</string>
    <string name="done"><u>Done</u></string>
    <string name="add_cart">Add To Cart</string>
    <string name="write_dedicate">Write a dedicate</string>
    <string name="similar_products">Similar Products</string>
    <string name="add_success">The item has been added to the cart successfully</string>
    <string name="go_cart">Go to pay</string>
    <string name="still_bay">Continue shopping</string>
    <string name="see_menu">See Menu</string>
    <string name="all">All</string>
    <string name="profile_update">Profile Updated Successfully</string>
    <string name="call_sent">Your message sent successfully</string>
    <string name="update_success">Address updated successfully</string>
    <string name="delete_error">You can not delete your main address!!</string>
    <string name="should_login">You should login first</string>
    <string name="go_login">Go Login</string>
    <string name="pay">Pay</string>
    <string name="order_summary">Order Summary</string>
    <string name="date">Date</string>
    <string name="date_hint">Today</string>
    <string name="time">Time</string>
    <string name="time_hint">Immediately</string>
    <string name="delivery_fees">Delivery fee for</string>
    <string name="uses">Use</string>
    <string name="filter_results">Filter Results</string>
    <string name="off">OFF</string>
    <string name="offer_products">Offers Products</string>
    <string name="all_products">All Products</string>
    <string name="order_completed">Your order sent successfully</string>
    <string name="status_opened">On Cart</string>
    <string name="status_submitted">Submitted</string>
    <string name="status_accepted">Accepted</string>
    <string name="status_prepared">Prepared</string>
    <string name="status_on_delivery">On Delivery</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_canceled">Canceled</string>
    <string name="order_num">Order Num</string>
    <string name="comp_pro">Complete The Process</string>
    <string name="empty_product">There are no products to show!!</string>
    <string name="min_order_amount">Minimum order</string>
    <string name="delivery_amount">Delivery Charge</string>
    <string name="delivery_duration">Delivery time</string>
    <string name="minute">minute</string>
    <string name="shop_status">Shop Status</string>
    <string name="shop_rate">Shop Evaluation</string>
    <string name="rate_num">Rated</string>
    <string name="times">times</string>
    <string name="just_one">Extras (one only)</string>
    <string name="multi">Extras (Multiple)</string>
    <string name="evaluation">Evaluation</string>
    <string name="your_evaluation">Evaluate your order</string>
    <string name="add_comment">Add a comment</string>
    <string name="submit_review">Submit Your Review</string>
    <string name="view_review"><u>View Reviews</u></string>
    <string name="write_review">Write your review</string>
    <string name="rate_massage_error">Please add your review massage</string>
    <string name="rate_review_error">Please add a review</string>
    <string name="rate_done">Your review sent successfully!!</string>
    <string name="cart_empty">Your cart is empty!!</string>

    <string name="closed">Closed</string>
    <string name="busy">Busy</string>
    <string name="available">Available</string>
</resources>