<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="15dp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:paddingBottom="16dp">

            <View
                android:layout_width="80dp"
                android:layout_height="3dp"
                android:background="#E3E3E3"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/al_jazeera_arabic"
                android:text="@string/ntf_ask"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/al_jazeera_arabic"
                android:text="@string/ntf_message"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btnEnable"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/al_jazeera_arabic"
                android:text="@string/activ_ntf"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:gravity="center"
                android:background="@drawable/background_button" />

            <TextView
                android:id="@+id/tvSkip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/al_jazeera_arabic"
                android:text="@string/skip"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>