<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_page"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".ui.dialogs.RateBottomSheet">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/al_jazeera_arabic"
            android:text="@string/your_evaluation"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rbMyRate"
            style="@android:style/Widget.Material.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="0.5"
            android:theme="@style/RatingBar" />

        <EditText
            android:id="@+id/edMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_product_edittext"
            android:fontFamily="@font/al_jazeera_arabic"
            android:gravity="top|start"
            android:hint="@string/add_comment"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:padding="12dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvAddReview"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.45"
                android:background="@drawable/background_button"
                android:fontFamily="@font/al_jazeera_arabic"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/submit_review"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.45"
                android:background="@drawable/background_location_button"
                android:fontFamily="@font/al_jazeera_arabic"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>
</layout>