<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isEdit"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient_page"
        tools:context=".ui.fragments.main.drawerNav.AddAddressFragment">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_back_ios"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/al_jazeera_arabic"
            android:text="@string/add_new_addresses"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/map_bottom_sheet"
                android:nestedScrollingEnabled="true"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"
                android:paddingBottom="16dp">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="3dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="16dp"
                            android:background="#E3E3E3" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="26dp"
                            android:orientation="horizontal"
                            android:weightSum="1">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:fontFamily="@font/al_jazeera_arabic"
                                android:text="@string/add_addresses"
                                android:textAlignment="viewStart"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvDelete"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.3"
                                android:fontFamily="@font/al_jazeera_arabic"
                                android:text="@string/delete"
                                android:textAlignment="center"
                                android:textColor="#BF0A00"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:visibility="@{isEdit ? View.VISIBLE : View.GONE, default = gone}" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvAddresses"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:padding="8dp"
                            android:fontFamily="@font/al_jazeera_arabic"
                            android:text="@string/address"
                            android:textSize="14sp"
                            android:background="@drawable/edittext_background"
                            android:textColor="@color/colorTextPrimary" />

                        <EditText
                            android:id="@+id/edPiece"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/edittext_background"
                            android:ems="10"
                            android:fontFamily="@font/al_jazeera_arabic"
                            android:hint="@string/piece"
                            android:inputType="number"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorTextPrimary"
                            android:textColorHint="@color/colorTextSecondary"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/edStreet"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/edittext_background"
                            android:ems="10"
                            android:fontFamily="@font/al_jazeera_arabic"
                            android:hint="@string/street"
                            android:inputType="text"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorTextPrimary"
                            android:textColorHint="@color/colorTextSecondary"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/edAvenue"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/edittext_background"
                            android:ems="10"
                            android:fontFamily="@font/al_jazeera_arabic"
                            android:hint="@string/avenue"
                            android:inputType="number"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorTextPrimary"
                            android:textColorHint="@color/colorTextSecondary"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/edHouse"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/edittext_background"
                            android:ems="10"
                            android:fontFamily="@font/al_jazeera_arabic"
                            android:hint="@string/house_number"
                            android:inputType="number"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorTextPrimary"
                            android:textColorHint="@color/colorTextSecondary"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/edFloor"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/edittext_background"
                            android:ems="10"
                            android:fontFamily="@font/al_jazeera_arabic"
                            android:hint="@string/floor_number"
                            android:inputType="number"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorTextPrimary"
                            android:textColorHint="@color/colorTextSecondary"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/edAdditional"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/edittext_background"
                            android:ems="10"
                            android:fontFamily="@font/al_jazeera_arabic"
                            android:gravity="top|start"
                            android:hint="@string/additional_info"
                            android:inputType="textMultiLine"
                            android:minLines="4"
                            android:paddingStart="14dp"
                            android:paddingEnd="14dp"
                            android:textColor="@color/colorTextPrimary"
                            android:textColorHint="@color/colorTextSecondary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvAddLocation"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/background_location_button"
                            android:fontFamily="@font/al_jazeera_arabic"
                            android:gravity="center"
                            android:text="@string/add_location"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <ProgressBar
                            android:id="@+id/pbLoad"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/btnSave"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/background_button"
                            android:gravity="center"
                            android:text="@string/save"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:clickable="true"
                            android:focusable="true"/>

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>