<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp">

            <View
                android:layout_width="80dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:background="#E3E3E3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/al_jazeera_arabic"
                android:text="@string/cancel_conf"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvNo"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.45"
                    android:background="@drawable/background_button"
                    android:elevation="0dp"
                    android:fontFamily="@font/al_jazeera_arabic"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="13dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.1" />

                <TextView
                    android:id="@+id/tvYes"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.45"
                    android:background="@drawable/background_location_button"
                    android:fontFamily="@font/al_jazeera_arabic"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>